--- a/PerformanceShaders/PerformanceShaders/Base.lproj/Main.storyboard
+++ b/PerformanceShaders/PerformanceShaders/Base.lproj/Main.storyboard
@@ -31,31 +31,20 @@
                                     <segment title="Edge"/>
                                     <segment title="Saturation"/>
                                 </segments>
-                                <color key="tintColor" red="0.81676640326727945" green="0.0" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="tintColor" red="0.99878168106079102" green="0.91468001298531809" blue="0.27335525499857205" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
                                     <action selector="selectedKernelChanged:" destination="BV1-FR-VrT" eventType="valueChanged" id="xkH-wG-PAI"/>
                                 </connections>
                             </segmentedControl>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dDM-Id-jPo">
-                                <rect key="frame" x="28" y="43" width="54" height="30"/>
+                                <rect key="frame" x="146" y="20" width="83" height="49"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <state key="normal" title="Camera"/>
                                 <connections>
                                     <action selector="cameraAction:" destination="BV1-FR-VrT" eventType="touchUpInside" id="bDJ-OQ-KBS"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yab-pm-N4N">
-                                <rect key="frame" x="275" y="43" width="92" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Photo Library"/>
-                                <connections>
-                                    <action selector="photolibraryaction:" destination="BV1-FR-VrT" eventType="touchUpInside" id="0E0-JF-5SU"/>
-                                </connections>
-                            </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ynR-aU-Ved">
-                                <rect key="frame" x="52" y="136" width="290" height="332"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -63,13 +52,11 @@
                             <constraint firstItem="DEw-W7-017" firstAttribute="centerX" secondItem="3se-qz-xqx" secondAttribute="centerX" id="PN8-SE-ELp"/>
                         </constraints>
                     </view>
-                    <connections>
-                        <outlet property="ImageView" destination="ynR-aU-Ved" id="623-LQ-h5j"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="424.80000000000001" y="437.63118440779613"/>
         </scene>
     </scenes>
+    <color key="tintColor" red="0.99878168106079102" green="0.96239987615463607" blue="0.079109281993345035" alpha="1" colorSpace="calibratedRGB"/>
 </document>
